--- a/css/main.css
+++ b/css/main.css
@@ -43,10 +43,17 @@ div {
 	-moz-column-count: 3;
 	-webkit-column-count: 3;
 	color: #CC0033;
+}
 	
-
+section {
+	margin: 0;
+	width: 65%; 
+	float: left;
 }
 
+section img {
+	max-width: 100%
+}
 p{
 		margin: 0 1.04166666667%;
 		
@@ -59,6 +66,14 @@ ul{
 
 a:hover{
 	color: white;
+}
+
+input:focus{
+	background: #FFFFB3;
+}
+
+textarea:focus{
+	background: #FFFFB3;
 }
 
 .inline{
@@ -98,11 +113,35 @@ aside {
 	opacity: .7;
 }
 
+aside img{
+		max-width: 100%
+}
+
 #main {
-	height: 640px;
+	
 	background: #FFE6CC url("../images/BG_Joe_HB_guitar.png") no-repeat center top;
-	overflow: scroll;
+	
     
+}
+table{
+	border-collapse: collapse;
+	border: 1px solid #000;
+}
+
+td {
+	border: 1px solid #000;
+	padding: .3em;
+}
+
+th {
+	text-align: left;
+	background-color: #999; 
+	color: #fff;
+	padding: .3em;
+}
+
+.even{
+	background-color: white;
 }
 
 footer {
@@ -182,7 +221,9 @@ div {
 aside {
 	float: none;
 }
-
+section {
+	float: none;
+}
 }
 
 /*Mobile Portrait Size to Mobile Landscape (devices and browsers)*/
@@ -198,6 +239,10 @@ div {
 	color: #CC0033;}
 	
 aside {
+
+	float: none;
+}
+section {
 	float: none;
 }
 
